--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,48 @@
   }
 }
 
+.searchBar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFF;
+  border-radius: 15px;
+  padding: 0 0 0 2px;
+}
+
+.search{
+  padding: 0 2px;
+  border: none;
+  outline: none;
+
+}
+
+.searchSubmit{
+  padding: 0 15px;
+  height: 100%;
+  padding: 0 2px;
+  border: none;
+  outline: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #f80000;
+  color: white;
+}
+
+.searchBarMobile{
+  display: none;
+}
+
+.paginationBox{
+  display: flex;
+  justify-content: space-around;
+}
+
+.paginationBtn{
+  background-color: white;
+  padding: 10px 8px;
+
+}
 .loginNavbarButton {
   text-decoration: none;
   padding: 0 1vw 0 1vw;
@@ -81,7 +123,6 @@
   z-index: 999;
   align-items: center;
   justify-content: space-between;
-  /* box-shadow: 0 5px 15px rgba(0, 0, 0, 0.03); */
 }
 
 .container {
@@ -134,12 +175,6 @@ body {
   color: black;
 }
 
-/* .banner h2 {
-  font-size: 46px;
-  line-height: 54px;
-  color: black;
-} */
-
 #first-cover h4 {
   font-size: 20px;
   color: black;
@@ -178,23 +213,11 @@ body {
   font-size: 0.7em;
 }
 
-/* .fa-shopping-cart {
-  color: #f80000;
-  font-size: 1.5em;
-  cursor: pointer;
-}
-
-.fa-shopping-cart:hover,
-.active {
-  color: white;
-} */
-
 .close-side-menu {
   height: 30px;
   width: 32px;
   display: none;
 }
-
 
 .activel {
   background: white;
@@ -223,7 +246,6 @@ body {
   font-weight: 600;
   color: #FFFDD0;
 }
-
 
 #first-cover h4 {
   padding-bottom: 15px;
@@ -263,20 +285,6 @@ body {
   width: 100%;
 }
 
-/* #header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 4px 80px;
-  background: #000000;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.03);
-  position: sticky;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  height: 10vh;
-} */
-
 #header-content {
   display: flex;
   align-items: center;
@@ -288,8 +296,6 @@ body {
   padding: 0 20px;
   position: relative;
 }
-
-
 
 #header-content li a {
   text-decoration: none;
@@ -364,7 +370,6 @@ body {
   min-height: 90vh;
 }
 
-
 .products-list{
   margin: auto;
   display: flex;
@@ -396,10 +401,6 @@ body {
   height: 20vh;
 }
 
-.contactPage{
-  min-height: 90vh;
-}
-
 .mapAndForm{
   display: flex;
 }
@@ -414,27 +415,15 @@ body {
   width: 100%;
   height: 80%;
 }
-.contactForm{
-  display: grid;
-  min-width: 50vw;
-}
 
-.inputBar{
-  width: 90%;
-  height: 20%;
-}
 .message{
   height: 50%;
 }
-.contactDetails{
-  display: grid;
-  align-items: center;
-  justify-content: center;
-}
+
 .mobileNumber, .emailId{
   margin: 1vh 3vw;
   background-color: #ececec;
-  border-radius: 30px;
+  border-radius: 10px;
   padding: 1vh 3vw;
 }
 .banner {
@@ -445,7 +434,6 @@ body {
 }
 
 .banner-text {
-  /* background-color: rgba(255, 253, 208, 0.9); */
   text-decoration: none;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -502,10 +490,6 @@ body {
   background-color: #FFFFFF;
 }
 
-/* .banner{
-  width: 100%;
-} */
-
 #footer {
   background-image: url("./Components/Assets/banner/b1.jpg");
   background-repeat: no-repeat;
@@ -538,142 +522,9 @@ body {
   color: orange;
 }
 
-/* #card1 {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: white;
-}
-
-#card1 .bo {
-  border-radius: 10px;
-  width: 250px;
-  height: 350px;
-  background-image: url(img/1.jpg);
-  box-sizing: border-box;
-  background-size: contain;
-  box-sizing: border-box;
-  color: rgb(201, 233, 67);
-  cursor: pointer;
-  align-items: center;
-  width: 250px;
-  height: 350px;
-  background-image: url(img/1.jpg);
-  font-size: 20px;
-  border: 3px solid #000000;
-  transition: 0.5s all ease-in-out;
-  -webkit-filter: brightness(100%);
-}
-
-#card1 .bo .griditem h4 {
-  display: inline-block;
-  box-sizing: border-box;
-  font-size: 24px;
-}
-
-#card1 .bo .griditem figcaption {
-  box-sizing: border-box;
-  color: rgb(201, 233, 67);
-  cursor: pointer;
-  display: block;
-  position: absolute;
-  background-color: white;
-}
-
-#card1 .bo .griditem figcaption:hover {
-  background-color: rgb(201, 233, 67);
-  -webkit-filter: brightness(100%);
-}
-
-#card1 .bo .griditem h4 {
-  padding: 5px 10px;
-  z-index: 999;
-}
-
-#card1 .griditem:hover {
-  transform: scale(1.02);
-  -webkit-filter: brightness(100%);
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
-}
-
-#card1 .bo .p1 button {
-  background-color: #088178;
-  padding: 4px 7px;
-  align-items: center;
-  border: 0px;
-} */
-
-/* menubar */
-/* .cart-items {
-  padding-right: 2em;
-  position: relative;
-} */
-
-/* .menu-sidebar{
-  display: none;
-} */
-
-/* .cart-sidebar {
-  display: none;
-  background: white;
-  position: fixed;
-  right: 450px;
-  top: 0;
-  max-width: 450px;
-  width: 90vw;
-  min-height: 100%;
-  z-index: 999;
-  transition: all 0.3s linear;
-  transform: translate(100%);
-  overflow: scroll;
-  box-sizing: border-box;
-  box-shadow: 0 0 20vw 100vw rgba(0, 0, 0, 0.5);
-} */
-
-/* .cart-sidebar .cart-items {
-  padding: 0;
-} */
-
-/* .cart-heading{
-  padding: 2vh 5vh;
-  display: flex;
-  justify-content: space-between;
-} */
-
-/* .cart-items .close-cart {
-  font-size: 1.3em;
-  padding: 1em;
-  cursor: pointer;
-} */
-
 .fa-items {
   margin-top: 0.5em;
 }
-
-/* .cart-items h2 {
-  text-align: center;
-  width: 100%;
-  margin-bottom: 1em;
-  font-size: 1.1em;
-  font-family: sans-serif;
-}
-
-.cart-product .product-image img {
-  width: 130px;
-  height: 90px;
-}
-
-.cart-product-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: 1em;
-  height: 80px;
-} */
 
 .plus-minus {
   display: flex;
@@ -689,26 +540,6 @@ body {
   margin: 1em 0 0.5em 0;
 
 }
-
-/* .clear-cart {
-  text-align: center;
-}
-
-.clear-cart .btn {
-  background-color: black;
-  color: white;
-  border: 1px solid white;
-  padding: 0.5em 1.7em;
-  cursor: pointer;
-  transition: 0.3s linear;
-  border-radius: 20px;
-}
-
-.clear-cart.btn:hover {
-  border: 1px solid #d4761e;
-  background: transparent;
-  color: black;
-} */
 
 .overlay {
   height: 100vh;
@@ -738,8 +569,6 @@ body {
   background: white;
   overflow: hidden;
   display: none;
-  /* transform: translate(-100%);
-  transition: 0.3s linear; */
   align-items: center;
 }
 
@@ -757,11 +586,6 @@ body {
   height: 4rem;
   padding-left: 15px;
   align-items: center;
-  /* border-style: double; */
-  /* border-spacing: 2em; */
-  /* border-color: rgba(0, 0, 0, 0.1);
-  padding-top: 1em; */
-  /* padding-bottom: 1em; */
 }
 
 .menu-list-items a,
@@ -771,7 +595,6 @@ i {
   color: #1a2024;
   text-decoration: none;
 }
-
 
 @media screen and (max-width: 880px), screen and (max-height: 700px) {
   #announcement-bar {
@@ -799,11 +622,6 @@ i {
       height: 8vh;
   }
 
-  /* #first-cover h2{
-      display: flexbox;
-      font-size: larger;
-      justify-content: center;
-  } */
   #first-cover {
       display: none;
   }
@@ -816,28 +634,43 @@ i {
       padding: 0;
   }
 
-  /* .container{
-      justify-content: center;
-  } */
   .products-list{
       justify-content: center;
   }
   .cart-sidebar {
-      top: 0;
-      display: none;
-      background-color: white;
-      background-size: cover;
-      min-height: 100vh;
+      display: grid;
+      background-size: cover; 
       min-width: 90vw;
       background-position: top;
-      z-index: 999;
-      right: 90vw;
       box-sizing: border-box;
       box-shadow: 0 0 20px 100vw rgba(0, 0, 0, 0.5);
   }
-  /* .cart-heading{
-      padding: 2vh 5vh;
-      display: flex;
-      justify-content: space-between;
-  }*/
+  .searchBar{
+    display: none;
+  }
+  .searchBarMobile{
+    display: flex;
+    background-color: white;
+    min-height: 5vh;
+    align-items: center;
+    /* justify-content: center;
+    position: fixed;
+    top: 8vh; 
+    width: 100%;
+    z-index: 999; */
+  }
+  .searchMobile{
+    min-width: 85vw;
+    padding: 5px 0 5px 15px;
+    border: none;
+    outline: none;
+  }
+  .searchSubmitMobile{
+    min-width: 15vw;
+    padding: 5px 10px 5px 0;
+    height: 100%;
+    border: none;
+    outline: none;
+
+  }
 } 
