--- a/frontend/src/Pages/css/Cart.css
+++ b/frontend/src/Pages/css/Cart.css
@@ -1,30 +1,60 @@
-.cart-sidebar{
-    min-height: 80vh;
-    background-color: rgb(255, 255, 255);
+.cart-sidebar {
+  min-height: 80vh;
+  background-color: rgb(255, 255, 255);
 }
 
-.cart-heading{
-    display: grid;
-    align-items: center;
-    justify-content: center;
+.cart-heading {
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 /* .cart-items{
     display: grid;
 } */
-.cartProductImage{
-    width: 10vw;
+.cartProductImage {
+  width: 10vw;
 }
 
-.cartProductItem{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.cartProductItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.cartProductName{
-    width: 20vw;
-    justify-content: center;
-    display: grid;
+.cartProductName {
+  width: 20vw;
+  justify-content: center;
+  display: grid;
+}
 
+.removeButton {
+  background-color: white;
+  padding: 5px 8px;
+  border-radius: 10px;
+}
+
+.changeQuantityBtn {
+  background-color: white;
+  padding: 2px 3px;
+  border-radius: 10px;
+  margin: 0 5px;
+  font-size: larger;
+}
+
+.clear-cart {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.btn {
+  background-color: white;
+  padding: 10px 5px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.checkout-text {
+  text-decoration: none;
+  color: inherit;
 }
