--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -11,9 +11,9 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,7 +35,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .searchBar{
   display: flex;
@@ -98,7 +98,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: cursive;
+  /* font-family: cursive; */
 }
 
 #announcement-bar {
@@ -399,21 +399,6 @@ body {
 
 .product-image {
   height: 20vh;
-}
-
-.mapAndForm{
-  display: flex;
-}
-.mapContainer{
-  width: 50vw;
-  min-height: 80vh;
-  justify-content: center;
-  align-items: center;
-  display: grid;
-}
-.map{
-  width: 100%;
-  height: 80%;
 }
 
 .message{
